# rust-xor-list

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
