[package]
name = "xor_list"
version = "0.1.1"
authors = ["Sebastian Widua <seppel3210@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An xor doubly-linked list"
documentation = "https://docs.rs/xor_list"
repository = "https://github.com/Seppel3210/rust-xor-list"
readme = "README.md"
keywords = ["xor", "list", "linked", "linked-list"]
categories = ["no-std", "embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
